<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fazzer</string>
    <string name="app_name_caps">FAZZER</string>
    <string name="refresh">Обновить</string>
    <string name="advert">Объявление</string>
    <string name="price">Цена</string>
    <string name="year">Год выпуска</string>
    <string name="nothing">Пусто</string>
    <string name="title_activity_welcome">Fazzer</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="welcome_text">Войдите или зарегистрируйтесь</string>
    <string name="register">Регистрация</string>
    <string name="do_register">Зарегистрироваться</string>
    <string name="send_code">Выслать код</string>
    <string name="login">Вход</string>
    <string name="do_login">Войти</string>
    <string name="title_activity_login">Вход</string>
    <string name="phone">Номер телефона</string>
    <string name="plus7">+7</string>
    <string name="phone_mask">+7...</string>
    <string name="password">Код из смс</string>
    <string name="password_confirmation">Повторите пароль</string>
    <string name="title_activity_register">Регистрация</string>
    <string name="logout">Выход</string>
    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="mileage">Пробег</string>
    <string name="description">Описание</string>
    <string name="city">Город</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="exchange">Обмен</string>
    <string name="color">Цвет</string>
    <string name="displacement">Объем двигателя</string>
    <string name="fuel">Топливо</string>
    <string name="transmission">Трансмиссия</string>
    <string name="drive">Привод</string>
    <string name="wheel">Руль</string>
    <string name="body">Кузов</string>
    <string name="filter">Фильтр</string>
    <string name="min_price">Цена от</string>
    <string name="max_price">Цена до</string>
    <string name="min_year">Год выпуска от</string>
    <string name="max_year">Год выпуска до</string>
    <string name="adverts">Объявления</string>
    <string name="save_filter">Сохранить фильтр</string>
    <string name="show_in_browser">Перейти к объявлению</string>
    <string name="slogan">Ищет машины пока вы заняты</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_filter">FirstFilterActivity</string>
    <string name="filter_slogan_part_one">Введите свои предпочтения и получайте</string>
    <string name="filter_slogan_part_two">самые свежие обновления</string>
    <string name="search">Поиск</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="loading">Загрузка...</string>
    <string name="saving">Сохранение...</string>
    <string name="title_activity_real_advert">Страница объявления</string>

</resources>
