<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/keyline_margin">

    <com.sequenia.fazzer.widgets.TypefacedEditText
        android:id="@+id/userPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        custom:my_typeface="Roboto-Regular.ttf">

        <requestFocus />

    </com.sequenia.fazzer.widgets.TypefacedEditText>

    <com.sequenia.fazzer.widgets.TypefacedEditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        custom:my_typeface="Roboto-Regular.ttf" />

    <com.sequenia.fazzer.widgets.TypefacedButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        custom:my_typeface="Roboto-Regular.ttf"/>

</LinearLayout>