<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="@dimen/keyline_margin"
        android:paddingLeft="@dimen/keyline_margin"
        android:paddingRight="@dimen/keyline_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/between_big">

            <ImageView
                style="@style/InputLogo"
                android:layout_gravity="bottom"
                android:src="@drawable/position"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.sequenia.fazzer.widgets.RobotoRegularTextView
                    style="@style/EditTextLabel"
                    android:text="@string/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.sequenia.fazzer.widgets.RobotoRegularTextView
                    style="@style/EditText"
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nothing"
                    android:inputType="text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/between_big">

            <ImageView
                style="@style/InputLogo"
                android:layout_gravity="bottom"
                android:src="@drawable/car"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:text="@string/mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditText"
                        android:id="@+id/mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:text="@string/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditText"
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="text"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/between_big">

            <ImageView
                style="@style/InputLogo"
                android:layout_gravity="bottom"
                android:src="@drawable/calendar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:text="@string/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularEditText
                        android:id="@+id/min_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="number"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularEditText
                        android:id="@+id/max_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/between_big">

            <ImageView
                style="@style/InputLogo"
                android:layout_gravity="bottom"
                android:src="@drawable/money"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:text="@string/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularEditText
                        android:id="@+id/min_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="number"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sequenia.fazzer.widgets.RobotoRegularTextView
                        style="@style/EditTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.sequenia.fazzer.widgets.RobotoRegularEditText
                        android:id="@+id/max_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nothing"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.sequenia.fazzer.widgets.RobotoRegularButton
            android:id="@+id/save_filter_button"
            android:layout_width="match_parent"
            style="@style/ButtonSize"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/save_filter"/>

    </LinearLayout>

</ScrollView>